Layout admin completed

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,8 @@
 $theme-colors: (
-  "primary": #112f41,
+  "primary": #311b92,
   "danger": #ff4136,
   "success": #47ab6c,
-  "info": #0894a1
+  "info": #00bcd4
 );
+
+$sidebar-width: 250px;
